[package]
name = "rvs"
version = "0.1.0"
authors = ["Rob Donnelly <rfdonnelly@gmail.com>"]
readme = "README.md"
description = "A library for defining and evaluating random variables using a simple DSL"
license = "MIT OR Apache-2.0"

[dependencies]
rvs-parser = { version = "0.1", path = "parser" }
rand = { git = "https://github.com/dhardy/rand" }
linked-hash-map = "0.5"

[workspace]
members = ["parser", "c-api", "repl"]

[badges]
travis-ci = { repository = "rfdonnelly/rvs" }
