[package]
name = "rvs"
version = "0.3.0"
authors = ["Rob Donnelly <rfdonnelly@gmail.com>"]
description = "A library for defining and evaluating random variables using a simple DSL"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rfdonnelly/rvs"
keywords = ["random", "c-api", "dsl"]

[dependencies]
rvs-parser = { version = "0.3", path = "parser" }
rand = "0.4"
linked-hash-map = "0.5"

[workspace]
members = ["parser", "c-api", "repl"]

[badges]
travis-ci = { repository = "rfdonnelly/rvs" }
codecov = { repository = "rfdonnelly/rvs" }
