[package]
name = "rvs"
version = "0.4.1"
edition = "2018"
authors = ["Rob Donnelly <rfdonnelly@gmail.com>"]
description = "A library for defining and evaluating random variables using a simple DSL"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rfdonnelly/rvs"
keywords = ["random", "c-api", "dsl"]

[dependencies]
rvs-parser = { version = "0.4", path = "parser" }
rand = "0.6"
rand_pcg = "0.1"
linked-hash-map = "0.5"

[workspace]
members = ["parser", "c-api", "repl"]

[badges]
travis-ci = { repository = "rfdonnelly/rvs" }
codecov = { repository = "rfdonnelly/rvs" }
