[package]
name = "rvs-c-api"
version = "0.1.0"
authors = ["Rob Donnelly <rfdonnelly@gmail.com>"]
description = "C-API for Rvs - A library for defining and evaluating random variables using a simple DSL"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rfdonnelly/rvs"
keywords = ["random", "c-api", "dsl"]

[lib]
name = "rvs"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
rvs = { version = "0.1", path = ".." }

[dev-dependencies]
tempdir = "0.3"
difference = "1.0"
