[package]
name = "rvs-c-api"
version = "0.4.1"
edition = "2018"
authors = ["Rob Donnelly <rfdonnelly@gmail.com>"]
description = "C-API for Rvs - A library for defining and evaluating random variables using a simple DSL"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rfdonnelly/rvs"
keywords = ["random", "c-api", "dsl"]

[lib]
name = "rvs"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
rvs = { version = "0.4", path = ".." }

[dev-dependencies]
tempfile = "3"
difference = "2.0"

[badges]
travis-ci = { repository = "rfdonnelly/rvs" }
codecov = { repository = "rfdonnelly/rvs" }
