[package]
name = "rvs-parser"
version = "0.2.0"
authors = ["Rob Donnelly <rfdonnelly@gmail.com>"]
build = "build.rs"
readme = "../README.md"
description = "Parser for Rvs - A library for defining and evaluating random variables using a simple DSL"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rfdonnelly/rvs"
keywords = ["random", "c-api", "dsl"]

[build-dependencies]
peg = { version = "0.5" }

[badges]
travis-ci = { repository = "rfdonnelly/rvs" }
codecov = { repository = "rfdonnelly/rvs" }
