[package]
name = "rvs-parser"
edition = "2018"
version = "0.5.0"
authors = ["Rob Donnelly <rfdonnelly@gmail.com>"]
readme = "../README.md"
description = "Parser for Rvs - A library for defining and evaluating random variables using a simple DSL"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rfdonnelly/rvs"
keywords = ["random", "c-api", "dsl"]

[dependencies]
peg = { version = "0.6" }

[badges]
travis-ci = { repository = "rfdonnelly/rvs" }
codecov = { repository = "rfdonnelly/rvs" }
