[package]
name = "rvs-repl"
edition = "2018"
version = "0.5.0"
authors = ["Rob Donnelly <rfdonnelly@gmail.com>"]
description = "REPL for Rvs - A library for defining and evaluating random variables using a simple DSL"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rfdonnelly/rvs"
keywords = ["random", "c-api", "dsl"]

[dependencies]
rvs = { version = "0.5", path = ".." }

[[bin]]
name = "rvs"
path = "src/main.rs"

[badges]
travis-ci = { repository = "rfdonnelly/rvs" }
codecov = { repository = "rfdonnelly/rvs" }
